--- a/rebound.cabal
+++ b/rebound.cabal
@@ -23,7 +23,7 @@ source-repository head
 library
   build-depends:    base >=4.9 && <5
   hs-source-dirs:   src
-  exposed-modules:  Lib
+  exposed-modules:  Rebound
   default-language: Haskell2010
   ghc-options:
     -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
